envoy/envoy_tls_test1.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 443

    listener_filters:
    - name: tls_inspector
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector

    filter_chains:
    - filter_chain_match:
        server_names: ["www.lijuanjuan.cloud","hub.lijuanjuan.cloud"]
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain: {filename: "/etc/envoy/cert/lijuanjuan.cloud_bundle.pem"}
                private_key: { filename: "/etc/envoy/cert/lijuanjuan.cloud.key"}

              - certificate_chain: {filename: "/etc/envoy/cert/hub.lijuanjuan.cloud_bundle.pem"}
                private_key: {filename: "/etc/envoy/cert/hub.lijuanjuan.cloud.key"}   

      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          use_remote_address: true
          normalize_path: true
          merge_slashes: true
          path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
          common_http_protocol_options:
            idle_timeout: 3600s # 1 hour
            headers_with_underscores_action: REJECT_REQUEST
          http2_protocol_options:
            max_concurrent_streams: 100
            initial_stream_window_size: 65536 # 64 KiB
            initial_connection_window_size: 1048576 # 1 MiB
          stream_idle_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
          request_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: default
              domains: ["www.lijuanjuan.cloud"]
              routes:
              - match: { prefix: "/" }
                route:
                  # host_rewrite_literal: www.lijuanjuan.cloud
                  cluster: service_test1
                  idle_timeout: 15s # must be disabled for long-lived and streaming requests
            - name: defaulta
              domains: ["hub.lijuanjuan.cloud"]
              routes:
              - match: { prefix: "/" }
                route:
                  # host_rewrite_literal: hub.lijuanjuan.cloud
                  cluster: envoy_test2
                  idle_timeout: 15s # must be disabled for long-lived and streaming requests

  clusters:
    - name: service_test1
      connect_timeout: 2s
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: some_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: test1
                      port_value: 80


    - name: envoy_test2
      connect_timeout: 2s
      per_connection_buffer_limit_bytes: 32768 # 32 KiB
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: envoy_test2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: registry
                      port_value: 5000
